fix: quik add button space gap with variant and no product card

--- a/assets/quick-add.css
+++ b/assets/quick-add.css
@@ -358,6 +358,8 @@ quick-add-modal .product-form__buttons {
   padding: 0.8rem;
   min-width: 100%;
   box-sizing: border-box;
+  margin-block-end: 1em;
+
 }
 
 quick-add-modal .product-media-container.constrain-height {
